--- a/nb/explore/hill.ipynb
+++ b/nb/explore/hill.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET = '/home/swei20/sketch-scale/data/force227/force227.xlsx'"
+    "# DATASET = '/home/swei20/sketch-scale/data/force227/force227.xlsx'\n",
+    "DATASET = '/home/swei20/sketch-scale/data/SST.xlsx'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.insert(0, '../..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hillSimple import *"
    ]
   },
   {
@@ -44,11 +54,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Float64Index([6409800.0, 2300200.0, 2116500.0,    108.27,  115000.0, -311140.0,\n",
+      "              2334800.0, 6245400.0, 2078900.0, -134700.0,  138460.0,  -82983.0,\n",
+      "              2122500.0, 2176600.0, 6929400.0,  319490.0,  -93729.0,  267180.0,\n",
+      "              -368630.0, -101370.0,  247570.0,  165090.0,   58352.0, 1978300.0,\n",
+      "               180110.0,  111020.0, -150850.0,  193980.0, 1796500.0,   37896.0,\n",
+      "                64917.0, -168080.0,  344330.0, 1831700.0,  193640.0,\n",
+      "               158460.0],\n",
+      "             dtype='float64')\n"
+     ]
+    }
+   ],
    "source": [
-    "data = pd.read_excel(DATASET)"
+    "data =load_data(DATASET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(        6409800.00   2300200.00   2116500.00   108.27       115000.00   \\\n",
+       " 0          6342200      2355900      2102700      28372.0      66519.0   \n",
+       " 1          6272300      2351500      2033500     -13374.0      42433.0   \n",
+       " 2          6327900      2368000      2110600      15398.0      74040.0   \n",
+       " 3          5574100      2236300      1694300    -138780.0    -266900.0   \n",
+       " 4          5764900      2268700      1728300    -133730.0    -189150.0   \n",
+       " ...            ...          ...          ...          ...          ...   \n",
+       " 16378      6949300      2206300      2406500     183570.0     478280.0   \n",
+       " 16379      6580100      2446700      2281600     274310.0    -229540.0   \n",
+       " 16380      6454600      2478500      2233900     301340.0    -274120.0   \n",
+       " 16381      6582500      2447700      2240500     293710.0    -258410.0   \n",
+       " 16382      6453700      2440000      2195500     300220.0    -245090.0   \n",
+       " \n",
+       "        -311140.00    2334800.00   6245400.00   2078900.00  -134700.00   ...  \\\n",
+       " 0        -317250.0      2399000      6231400      2116900     -91513.0  ...   \n",
+       " 1        -369820.0      2407800      6229700      2029300     -81059.0  ...   \n",
+       " 2        -377910.0      2401700      6208900      2056500    -110480.0  ...   \n",
+       " 3        -434780.0      2290600      5714600      1473600     -47571.0  ...   \n",
+       " 4        -407870.0      2334300      5890300      1554500     -86934.0  ...   \n",
+       " ...            ...          ...          ...          ...          ...  ...   \n",
+       " 16378     251270.0      2140900      6264900      2278600    -170100.0  ...   \n",
+       " 16379      15684.0      2447500      6191600      2395900    -360570.0  ...   \n",
+       " 16380       3984.9      2535700      6198000      2439100    -390060.0  ...   \n",
+       " 16381      38157.0      2480800      6235700      2410200    -387840.0  ...   \n",
+       " 16382      18773.0      2520000      6267300      2439400    -384990.0  ...   \n",
+       " \n",
+       "        -150850.00    193980.00    1796500.00   37896.00     64917.00    \\\n",
+       " 0        -184870.0     184210.0      1764700      45093.0      82611.0   \n",
+       " 1        -225270.0     204090.0      1721100      24477.0      66234.0   \n",
+       " 2        -283550.0     160160.0      1796200      16756.0      62592.0   \n",
+       " 3        -669420.0     108840.0      1865900     133580.0      99937.0   \n",
+       " 4        -578680.0     131710.0      1767300      83289.0      70404.0   \n",
+       " ...            ...          ...          ...          ...          ...   \n",
+       " 16378     247470.0     214600.0      2052500     249500.0     268880.0   \n",
+       " 16379     -71007.0    -226130.0      1722200     154290.0     179410.0   \n",
+       " 16380     -63779.0    -247050.0      1639800     154840.0     171630.0   \n",
+       " 16381     -38686.0    -243080.0      1637000     151180.0     169750.0   \n",
+       " 16382     -53245.0    -217900.0      1600900     158310.0     179940.0   \n",
+       " \n",
+       "        -168080.00    344330.00    1831700.00   193640.00    158460.00   \n",
+       " 0        -134560.0     209620.0      1839900     188490.0     174910.0  \n",
+       " 1        -137690.0     265420.0      1807200     208490.0     153800.0  \n",
+       " 2        -166480.0     221110.0      1797400     171080.0     162610.0  \n",
+       " 3          42500.0     734960.0      1946900     124900.0       4585.4  \n",
+       " 4         -48755.0     664540.0      1850100     144230.0      53279.0  \n",
+       " ...            ...          ...          ...          ...          ...  \n",
+       " 16378     -88171.0     312700.0      1898900     227160.0     245310.0  \n",
+       " 16379    -332810.0    -227800.0      1856300    -175450.0     224300.0  \n",
+       " 16380    -380520.0    -279570.0      1886500    -196020.0     228400.0  \n",
+       " 16381    -373740.0    -244440.0      1837500    -195070.0     220120.0  \n",
+       " 16382    -385680.0    -275760.0      1894700    -169870.0     217020.0  \n",
+       " \n",
+       " [16383 rows x 36 columns],\n",
+       " Float64Index([6409800.0, 2300200.0, 2116500.0,    108.27,  115000.0, -311140.0,\n",
+       "               2334800.0, 6245400.0, 2078900.0, -134700.0,  138460.0,  -82983.0,\n",
+       "               2122500.0, 2176600.0, 6929400.0,  319490.0,  -93729.0,  267180.0,\n",
+       "               -368630.0, -101370.0,  247570.0,  165090.0,   58352.0, 1978300.0,\n",
+       "                180110.0,  111020.0, -150850.0,  193980.0, 1796500.0,   37896.0,\n",
+       "                 64917.0, -168080.0,  344330.0, 1831700.0,  193640.0,\n",
+       "                158460.0],\n",
+       "              dtype='float64'))"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
