reorganized cancer pipeline

--- a/nb/eval/eval_cancerPipeline.ipynb
+++ b/nb/eval/eval_cancerPipeline.ipynb
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.argv = ['eval_cancerPipeline', '--config', \"/home/swei20/sketch-scale/src/configs/cellConfig_test.json\"]"
+    "sys.argv = ['eval_cancerPipeline', '--config', \"/home/swei20/sketch-scale/src/configs/cancerConfig_test.json\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Output directory is ./out/\n",
+      "INFO:root:Output directory is ../../out\n",
       "INFO:root:saving dict_items([('mat', False), ('mask', False), ('maskId', None)])\n"
      ]
     },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -116,88 +116,12 @@
     }
    ],
    "source": [
-    "dfNorm = cp.run()"
+    "dfNorm = cp.run(saveNorm=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<HDF5 dataset \"merp\": shape (), type \"<i8\">\n"
-     ]
-    }
-   ],
-   "source": [
-    "save_dataset(f\"{cp.out}/test\", 1,\"merp\", storeShape=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "<HDF5 dataset \"merp\": shape (), type \"<i8\">\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = load_dataset(f\"{cp.out}/test\", \"merp\", sl=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Closed HDF5 dataset>"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-1cf91bb60cc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
-     ]
-    }
-   ],
-   "source": [
-    "len(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -234,58 +158,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.087656</td>\n",
-       "      <td>0.310773</td>\n",
-       "      <td>0.680413</td>\n",
-       "      <td>0.655711</td>\n",
-       "      <td>0.638731</td>\n",
-       "      <td>0.638867</td>\n",
-       "      <td>0.629401</td>\n",
-       "      <td>0.613517</td>\n",
+       "      <td>0.107121</td>\n",
+       "      <td>0.738725</td>\n",
+       "      <td>0.845613</td>\n",
+       "      <td>0.804681</td>\n",
+       "      <td>0.621779</td>\n",
+       "      <td>0.605547</td>\n",
+       "      <td>0.599121</td>\n",
+       "      <td>0.600896</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.115149</td>\n",
-       "      <td>0.265924</td>\n",
-       "      <td>0.662200</td>\n",
-       "      <td>0.665394</td>\n",
-       "      <td>0.638162</td>\n",
-       "      <td>0.635808</td>\n",
-       "      <td>0.625600</td>\n",
-       "      <td>0.615750</td>\n",
+       "      <td>0.121556</td>\n",
+       "      <td>0.753359</td>\n",
+       "      <td>0.874972</td>\n",
+       "      <td>0.791080</td>\n",
+       "      <td>0.622210</td>\n",
+       "      <td>0.593437</td>\n",
+       "      <td>0.598288</td>\n",
+       "      <td>0.598121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.136399</td>\n",
-       "      <td>0.237099</td>\n",
-       "      <td>0.650176</td>\n",
-       "      <td>0.672751</td>\n",
-       "      <td>0.637976</td>\n",
-       "      <td>0.632701</td>\n",
-       "      <td>0.623327</td>\n",
-       "      <td>0.616876</td>\n",
+       "      <td>0.116791</td>\n",
+       "      <td>0.759038</td>\n",
+       "      <td>0.878839</td>\n",
+       "      <td>0.765659</td>\n",
+       "      <td>0.628680</td>\n",
+       "      <td>0.586092</td>\n",
+       "      <td>0.601528</td>\n",
+       "      <td>0.603424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.148912</td>\n",
-       "      <td>0.221893</td>\n",
-       "      <td>0.642867</td>\n",
-       "      <td>0.677514</td>\n",
-       "      <td>0.637036</td>\n",
-       "      <td>0.631287</td>\n",
-       "      <td>0.621542</td>\n",
-       "      <td>0.618331</td>\n",
+       "      <td>0.102127</td>\n",
+       "      <td>0.759711</td>\n",
+       "      <td>0.876359</td>\n",
+       "      <td>0.717180</td>\n",
+       "      <td>0.624526</td>\n",
+       "      <td>0.581857</td>\n",
+       "      <td>0.600687</td>\n",
+       "      <td>0.613007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.152212</td>\n",
-       "      <td>0.218483</td>\n",
-       "      <td>0.640673</td>\n",
-       "      <td>0.682049</td>\n",
-       "      <td>0.635764</td>\n",
-       "      <td>0.629918</td>\n",
-       "      <td>0.620734</td>\n",
-       "      <td>0.619513</td>\n",
+       "      <td>0.086537</td>\n",
+       "      <td>0.751681</td>\n",
+       "      <td>0.870540</td>\n",
+       "      <td>0.647160</td>\n",
+       "      <td>0.618729</td>\n",
+       "      <td>0.565642</td>\n",
+       "      <td>0.604822</td>\n",
+       "      <td>0.614950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -299,96 +223,96 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>641908</th>\n",
-       "      <td>0.053026</td>\n",
-       "      <td>0.495735</td>\n",
-       "      <td>0.405518</td>\n",
-       "      <td>0.612959</td>\n",
-       "      <td>0.651828</td>\n",
-       "      <td>0.626037</td>\n",
-       "      <td>0.607695</td>\n",
-       "      <td>0.637428</td>\n",
+       "      <th>689377</th>\n",
+       "      <td>0.009724</td>\n",
+       "      <td>0.579681</td>\n",
+       "      <td>0.542491</td>\n",
+       "      <td>0.657564</td>\n",
+       "      <td>0.563439</td>\n",
+       "      <td>0.604214</td>\n",
+       "      <td>0.616749</td>\n",
+       "      <td>0.657772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>641909</th>\n",
-       "      <td>0.053938</td>\n",
-       "      <td>0.479430</td>\n",
-       "      <td>0.413306</td>\n",
-       "      <td>0.618116</td>\n",
-       "      <td>0.652189</td>\n",
-       "      <td>0.625937</td>\n",
-       "      <td>0.607780</td>\n",
-       "      <td>0.637937</td>\n",
+       "      <th>689378</th>\n",
+       "      <td>0.013174</td>\n",
+       "      <td>0.606060</td>\n",
+       "      <td>0.530437</td>\n",
+       "      <td>0.666975</td>\n",
+       "      <td>0.551956</td>\n",
+       "      <td>0.608038</td>\n",
+       "      <td>0.614290</td>\n",
+       "      <td>0.665491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>641910</th>\n",
-       "      <td>0.052308</td>\n",
-       "      <td>0.469862</td>\n",
-       "      <td>0.424857</td>\n",
-       "      <td>0.624395</td>\n",
-       "      <td>0.650504</td>\n",
-       "      <td>0.626551</td>\n",
-       "      <td>0.608511</td>\n",
-       "      <td>0.641257</td>\n",
+       "      <th>689379</th>\n",
+       "      <td>0.010139</td>\n",
+       "      <td>0.590363</td>\n",
+       "      <td>0.571060</td>\n",
+       "      <td>0.675751</td>\n",
+       "      <td>0.587613</td>\n",
+       "      <td>0.619372</td>\n",
+       "      <td>0.632167</td>\n",
+       "      <td>0.671267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>641911</th>\n",
-       "      <td>0.046912</td>\n",
-       "      <td>0.469118</td>\n",
-       "      <td>0.442572</td>\n",
-       "      <td>0.631608</td>\n",
-       "      <td>0.646845</td>\n",
-       "      <td>0.627021</td>\n",
-       "      <td>0.608553</td>\n",
-       "      <td>0.648367</td>\n",
+       "      <th>689380</th>\n",
+       "      <td>0.021661</td>\n",
+       "      <td>0.562911</td>\n",
+       "      <td>0.565627</td>\n",
+       "      <td>0.665689</td>\n",
+       "      <td>0.595155</td>\n",
+       "      <td>0.597269</td>\n",
+       "      <td>0.615128</td>\n",
+       "      <td>0.740274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>641912</th>\n",
-       "      <td>0.037698</td>\n",
-       "      <td>0.479777</td>\n",
-       "      <td>0.467245</td>\n",
-       "      <td>0.639526</td>\n",
-       "      <td>0.640294</td>\n",
-       "      <td>0.629682</td>\n",
-       "      <td>0.608593</td>\n",
-       "      <td>0.658797</td>\n",
+       "      <th>689381</th>\n",
+       "      <td>0.016046</td>\n",
+       "      <td>0.555148</td>\n",
+       "      <td>0.552735</td>\n",
+       "      <td>0.663147</td>\n",
+       "      <td>0.552355</td>\n",
+       "      <td>0.587779</td>\n",
+       "      <td>0.648719</td>\n",
+       "      <td>0.681039</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>641913 rows × 8 columns</p>\n",
+       "<p>689382 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "              d0        d1        d2        d3        d4        d5        d6  \\\n",
-       "0       0.087656  0.310773  0.680413  0.655711  0.638731  0.638867  0.629401   \n",
-       "1       0.115149  0.265924  0.662200  0.665394  0.638162  0.635808  0.625600   \n",
-       "2       0.136399  0.237099  0.650176  0.672751  0.637976  0.632701  0.623327   \n",
-       "3       0.148912  0.221893  0.642867  0.677514  0.637036  0.631287  0.621542   \n",
-       "4       0.152212  0.218483  0.640673  0.682049  0.635764  0.629918  0.620734   \n",
+       "0       0.107121  0.738725  0.845613  0.804681  0.621779  0.605547  0.599121   \n",
+       "1       0.121556  0.753359  0.874972  0.791080  0.622210  0.593437  0.598288   \n",
+       "2       0.116791  0.759038  0.878839  0.765659  0.628680  0.586092  0.601528   \n",
+       "3       0.102127  0.759711  0.876359  0.717180  0.624526  0.581857  0.600687   \n",
+       "4       0.086537  0.751681  0.870540  0.647160  0.618729  0.565642  0.604822   \n",
        "...          ...       ...       ...       ...       ...       ...       ...   \n",
-       "641908  0.053026  0.495735  0.405518  0.612959  0.651828  0.626037  0.607695   \n",
-       "641909  0.053938  0.479430  0.413306  0.618116  0.652189  0.625937  0.607780   \n",
-       "641910  0.052308  0.469862  0.424857  0.624395  0.650504  0.626551  0.608511   \n",
-       "641911  0.046912  0.469118  0.442572  0.631608  0.646845  0.627021  0.608553   \n",
-       "641912  0.037698  0.479777  0.467245  0.639526  0.640294  0.629682  0.608593   \n",
+       "689377  0.009724  0.579681  0.542491  0.657564  0.563439  0.604214  0.616749   \n",
+       "689378  0.013174  0.606060  0.530437  0.666975  0.551956  0.608038  0.614290   \n",
+       "689379  0.010139  0.590363  0.571060  0.675751  0.587613  0.619372  0.632167   \n",
+       "689380  0.021661  0.562911  0.565627  0.665689  0.595155  0.597269  0.615128   \n",
+       "689381  0.016046  0.555148  0.552735  0.663147  0.552355  0.587779  0.648719   \n",
        "\n",
        "              d7  \n",
-       "0       0.613517  \n",
-       "1       0.615750  \n",
-       "2       0.616876  \n",
-       "3       0.618331  \n",
-       "4       0.619513  \n",
+       "0       0.600896  \n",
+       "1       0.598121  \n",
+       "2       0.603424  \n",
+       "3       0.613007  \n",
+       "4       0.614950  \n",
        "...          ...  \n",
-       "641908  0.637428  \n",
-       "641909  0.637937  \n",
-       "641910  0.641257  \n",
-       "641911  0.648367  \n",
-       "641912  0.658797  \n",
+       "689377  0.657772  \n",
+       "689378  0.665491  \n",
+       "689379  0.671267  \n",
+       "689380  0.740274  \n",
+       "689381  0.681039  \n",
        "\n",
-       "[641913 rows x 8 columns]"
+       "[689382 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,6 +320,13 @@
    "source": [
     "dfNorm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
