add multiple config feature

--- a/nb/eval/eval_sketchPipeline.ipynb
+++ b/nb/eval/eval_sketchPipeline.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.argv = ['eval_sketchPipeline', '--config', \"/home/swei20/sketch-scale/src/configs/sketchConfig.json\"]"
+    "sys.argv = ['eval_sketchPipeline', '--config', \"/home/swei20/sketch-scale/src/configs/sketchConfig.json\", \"\"]"
    ]
   },
   {
@@ -79,6 +79,15 @@
    "source": [
     "base = 5\n",
     "dfNorm = load_dataset(DATASET_PATH, \"dfNorm\", fileFormat=\"csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SketchPipeline"
    ]
   },
   {
