--- a/nb/eval/eval_sketchPipeline.ipynb
+++ b/nb/eval/eval_sketchPipeline.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -144,10 +144,320 @@
       "[20000 rows x 12 columns]\n",
       "{'stream': False, 'HH': True, 'UMAP': True, 'KMAP': True}\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/swei20/sketch-scale/src/clustering/embed.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.dfHH['u1'] = matUMAP[:,0]\n",
+      "/home/swei20/sketch-scale/src/clustering/embed.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.dfHH['u2'] = matUMAP[:,1]\n",
+      "/home/swei20/sketch-scale/src/clustering/embed.py:42: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.dfHH[f'k{self.nCluster}'] = kmap.labels_ + 1\n"
+     ]
     }
    ],
    "source": [
     "dfEmbed = sp.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>HH</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>rk</th>\n",
+       "      <th>ra</th>\n",
+       "      <th>u1</th>\n",
+       "      <th>u2</th>\n",
+       "      <th>k10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3.646491e+10</td>\n",
+       "      <td>2567.0</td>\n",
+       "      <td>2567.0</td>\n",
+       "      <td>0.003953</td>\n",
+       "      <td>7.495805</td>\n",
+       "      <td>8.666284</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3.895927e+10</td>\n",
+       "      <td>2128.0</td>\n",
+       "      <td>4695.0</td>\n",
+       "      <td>0.007229</td>\n",
+       "      <td>7.671443</td>\n",
+       "      <td>9.236639</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.396046e+10</td>\n",
+       "      <td>1537.0</td>\n",
+       "      <td>6232.0</td>\n",
+       "      <td>0.009596</td>\n",
+       "      <td>3.970073</td>\n",
+       "      <td>3.682997</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>18</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.396047e+10</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>7753.0</td>\n",
+       "      <td>0.011938</td>\n",
+       "      <td>-0.769126</td>\n",
+       "      <td>2.137719</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.397079e+10</td>\n",
+       "      <td>1452.0</td>\n",
+       "      <td>9205.0</td>\n",
+       "      <td>0.014173</td>\n",
+       "      <td>10.491820</td>\n",
+       "      <td>2.237984</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19994</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.385155e+10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>649437.0</td>\n",
+       "      <td>0.999977</td>\n",
+       "      <td>10.839565</td>\n",
+       "      <td>5.761152</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19995</th>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.385202e+10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>649440.0</td>\n",
+       "      <td>0.999982</td>\n",
+       "      <td>6.222092</td>\n",
+       "      <td>6.457123</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19996</th>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.385647e+10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>649443.0</td>\n",
+       "      <td>0.999986</td>\n",
+       "      <td>2.487628</td>\n",
+       "      <td>6.166207</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19997</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3.385673e+10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>649446.0</td>\n",
+       "      <td>0.999991</td>\n",
+       "      <td>3.434853</td>\n",
+       "      <td>6.645476</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19998</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3.135790e+10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>649449.0</td>\n",
+       "      <td>0.999995</td>\n",
+       "      <td>4.214314</td>\n",
+       "      <td>4.548297</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19999 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0   1   2   3   4   5   6   7            HH    freq        rk  \\\n",
+       "0      0  12  13  14  12  13  13  14  3.646491e+10  2567.0    2567.0   \n",
+       "1      0  12  13  14  12  13  13  15  3.895927e+10  2128.0    4695.0   \n",
+       "2      1  15  17  12  13  11  13  13  3.396046e+10  1537.0    6232.0   \n",
+       "3      2  16  18  13  13  11  13  13  3.396047e+10  1521.0    7753.0   \n",
+       "4      3   5  14  14  13  13  13  13  3.397079e+10  1452.0    9205.0   \n",
+       "...   ..  ..  ..  ..  ..  ..  ..  ..           ...     ...       ...   \n",
+       "19994  1  12  11  14  10  12  12  13  3.385155e+10     3.0  649437.0   \n",
+       "19995  0  14  16  14  12  12  12  13  3.385202e+10     3.0  649440.0   \n",
+       "19996  1  17  13  14   9  13  12  13  3.385647e+10     3.0  649443.0   \n",
+       "19997  1  13  14  16  10  13  12  13  3.385673e+10     3.0  649446.0   \n",
+       "19998  1  15  18  14  13  12  12  12  3.135790e+10     3.0  649449.0   \n",
+       "\n",
+       "             ra         u1        u2  k10  \n",
+       "0      0.003953   7.495805  8.666284    2  \n",
+       "1      0.007229   7.671443  9.236639    2  \n",
+       "2      0.009596   3.970073  3.682997    7  \n",
+       "3      0.011938  -0.769126  2.137719    1  \n",
+       "4      0.014173  10.491820  2.237984    4  \n",
+       "...         ...        ...       ...  ...  \n",
+       "19994  0.999977  10.839565  5.761152    9  \n",
+       "19995  0.999982   6.222092  6.457123   10  \n",
+       "19996  0.999986   2.487628  6.166207    3  \n",
+       "19997  0.999991   3.434853  6.645476    3  \n",
+       "19998  0.999995   4.214314  4.548297    7  \n",
+       "\n",
+       "[19999 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEmbed"
    ]
   },
   {
