add star pipeline

--- a/nb/eval/eval_cancerPipeline.ipynb
+++ b/nb/eval/eval_cancerPipeline.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PATH = '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki'"
+    "DATAPATH = '/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/bki'"
    ]
   },
   {
