--- a/nb/eval/eval_starDataset.ipynb
+++ b/nb/eval/eval_starDataset.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATAPATH = \"/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/sdss_stars/DR13color/\""
+    "DATAPATH = \"/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/sdss_stars/\""
    ]
   },
   {
@@ -44,20 +44,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.prepro.normFn import get_min_max_norm"
+    "from src.dataset.starDataset import StarDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfPhoto = pd.read_csv(DATAPATH+\"photoDR13_30Mext_viskawei.csv\")"
+    "sd = StarDataset(DATAPATH, isTest=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['W' 'K7' 'F8' 'A2' 'G8']\n",
+      "['W' 'x' 'V' 'II' 'I']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sd.run()"
    ]
   },
   {
@@ -102,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfPhotoNorm = get_min_max_norm(dfPhoto0[ftr])"
+    "dfPhotoNorm, vmin, vmax = get_min_max_norm(dfPhoto0[ftr], out=True)"
    ]
   },
   {
@@ -701,6 +719,78 @@
    "source": [
     "embed.dfHH"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSpec = pd.read_csv(DATAPATH+\"spec530k.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLabel = dfSpec[['class','subclass']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.dataset.starLabel import get_subclass_pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = dfLabel[dfLabel[\"class5\"]!=\"x\"].sample(10000).index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/scratch/ceph/szalay/swei20/cancerHH/AceCanZ/data/sdss_stars//DR13color/spec530k_test.csv'"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sd.specPath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSpec.iloc[ids].to_csv(DATAPATH + \"DR13color/spec530k_test.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
